correct dependencies + fix "package com.sun.java.swing is not visible" issue
- add new libs to class path
- add compiler option to avoid error
(--add-exports=java.desktop/com.sun.java.swing=ALL-UNNAMED)